--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "mocha --timeout 10000 tests/api-tests.js"
+    "test": "mocha tests/api-tests.js"
   },
   "author": "",
   "license": "ISC",
