--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,12 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.5.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^7.6.0",
     "nodemon": "^3.0.1",
     "react-redux": "^8.1.2"
   },
