--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-env": "^7.22.20",
     "@babel/register": "^7.22.15",
     "chai-http": "^4.4.0",
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "mochawesome": "^7.1.3"
   }
 }
