--- a/tests/.gitignore
+++ b/tests/.gitignore
@@ -10,7 +10,8 @@
 
 # production
 /build
-/.env
+/test-report3
+
 # misc
 .DS_Store
 .env.local
@@ -21,3 +22,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
